  systems.

Files: series.rwl.plot.R
------------------------

- Fixed clipping of text in the lower right corner of the plot

File: skel.plot.R
-----------------

- Adjusted alignment, size and clipping properties of viewports.  Now a
  plot with less than the full number of rows can fit in a smaller
  device and text on the sides won't be clipped.

File: timeseries-dplR.Rnw
-------------------------

- wavelet.plot(useRaster=TRUE) in the vignette reduces the size of
  both timeseries-dplR.pdf and the package tarball

File: wavelet.plot.R
--------------------

- Added three options to wavelet.plot().
  'useRaster': draw the filled contours as a raster image? (default 'FALSE')
  'res': resolution of the filled contours when 'useRaster' is 'TRUE'
  'reverse.y': if TRUE, Y-axis of the filled contour plot is reversed
- A subtle change to the default value of wavelet.levels: To get
  the sequence 0, 0.1, 0.2, ..., 1 it is best to use (0:10)/10
  instead of seq(from=0, to=1, by=0.1).  Parentheses in the former are
  used for clarity of meaning.
- Added some input checks
- Small optimizations
- More graphical parameters are restored after the function has run
- Better reuse of code between side.by.side=TRUE and side.by.side=FALSE
- Use of dev.hold() and dev.flush()

Files: xskel.ccf.plot.R and xskel.plot.R
----------------------------------------

- Code optimizations
- Small changes to output

* CHANGES IN dplR VERSION 1.6.0

File: TODO
-------------------------
- Added a TODO list that follows the todo.ell format.

File: NAMESPACE
-------------------------
- Added chron.plot to export list.
- Added interseries.cor to export list.
- Added plot.rwl as an S3Method.
- Added plot.crn as an S3Method.
- Added summary.rwl as an S3Method.
- Added insert and delete.ring functions.

File: xskel.ccf.plot.R and xskel.plot.R and 
---------------

- New plotting functions to help crossdate with skeleton plot
  and cross correlation plots.

File: ccf.series.rwl.R
---------------
